k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: premiere-league-deployment
  labels:
    app: premiere-league
spec:
  replicas: 2
  selector:
    matchLabels:
      app: premiere-league
  template:
    metadata:
      labels:
        app: premiere-league
    spec:
      containers:
      - name: premiere-league-app
        image: hibatullahsyauqi/premiere-league:latest
        ports:
        - containerPort: 8080
